[package]
name = "rmqtt-acl"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmqtt.workspace = true
rmqtt-macros.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio.workspace = true
anyhow.workspace = true
log.workspace = true
serde_json.workspace = true
async-trait.workspace = true
ahash.workspace = true
dashmap.workspace = true
