[package]
name = "rmqtt-acl"
version = "0.1.1"
description = "The built-in ACL uses file-based rules, making it simple and lightweight—ideal for projects with stable or few rule changes."
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmqtt = { workspace = true, features = ["plugin"] }
serde = { workspace = true, features = ["derive"] }
tokio.workspace = true
anyhow.workspace = true
log.workspace = true
serde_json.workspace = true
async-trait.workspace = true
ahash.workspace = true
dashmap.workspace = true
