[package]
name = "rmqtt-auth-http"
version = "0.1.1"
authors = ["rmqtt-rs <rmqttd@126.com>"]
edition = "2018"

[dependencies]
rmqtt = { git = "https://github.com/rmqtt-rs/rmqtt.git", version="0.1.6"}
#rmqtt = { path = "../../rmqtt" }
log = "0.4"
async-trait = "0.1.36"
serde = { version = "1.0.104", features = ["derive"] }
reqwest = { version = "0.11.3", features = ["json"] }
serde_json = "1.0.48"
tokio = { version = "1.4", default-features=false}
lazy_static = "1.4"
dashmap = "3.11"
ahash = "0.7.2"
anyhow = "1"