[package]
name = "rmqtt-auth-jwt"
version = "0.1.2"
description = "JWT is a token-based auth method that removes the need for server-side credential storage. RMQTT supports JWT-based user authentication."
repository = "https://github.com/rmqtt/rmqtt/tree/master/rmqtt-plugins/rmqtt-auth-jwt"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmqtt = { workspace = true, features = ["plugin"] }
serde = { workspace = true, features = ["derive"] }
ahash.workspace = true
anyhow.workspace = true
async-trait.workspace = true
itoa.workspace = true
log.workspace = true
serde_json.workspace = true
tokio.workspace = true
itertools.workspace = true
jsonwebtoken.workspace = true