[package]
name = "rmqtt-auto-subscription"
version = "0.1.0"
description = "Automatic subscription"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmqtt.workspace = true
rmqtt-macros.workspace = true
serde = { workspace = true, features = ["derive"] }