[package]
name = "rmqtt-auto-subscription"
version = "0.1.0"
description = "Auto Subscription allows RMQTT to set multiple rules, subscribing the device to specified topics according to the rules once it successfully connects, without the need to initiate subscriptions separately."
repository = "https://github.com/rmqtt/rmqtt/tree/master/rmqtt-plugins/rmqtt-auto-subscription"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmqtt = { workspace = true, features = ["plugin", "auto-subscription"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["sync" ] }
serde_json.workspace = true
log.workspace = true
async-trait.workspace = true
anyhow.workspace = true
