[package]
name = "rmqtt-bridge-egress-kafka"
version = "0.1.0"
description = "Bridge remote KAFKA in egress mode."
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmqtt.workspace = true
rmqtt-macros.workspace = true
serde = { workspace = true, features = ["derive"] }
rdkafka = { version = "0.37", features = ["cmake-build"] }