[package]
name = "rmqtt-bridge-egress-mqtt"
version.workspace = true
description = "Bridge remote MQTT in egress mode."
repository = "https://github.com/rmqtt/rmqtt/tree/master/rmqtt-plugins/rmqtt-bridge-egress-mqtt"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmqtt = { workspace = true, features = ["plugin"] }
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true, features = ["derive"] }
ntex-mqtt = "=4.6.1"
ntex = { version = "=2.16.0", features = ["tokio", "rustls"] }
ntex-tls = "=2.6.1"
event-notify = "0.1.1"
webpki-roots.workspace = true
serde_json.workspace = true
log.workspace = true
async-trait.workspace = true
anyhow.workspace = true
rustls.workspace = true
rand.workspace = true
bytestring.workspace = true
futures.workspace = true
base64.workspace = true



