[package]
name = "rmqtt-bridge-egress-nats"
version = "0.1.1"
description = "Bridge remote NATS in egress mode."
repository = "https://github.com/rmqtt/rmqtt/tree/master/rmqtt-plugins/rmqtt-bridge-egress-nats"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmqtt = { workspace = true, features = ["plugin"] }
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true, features = ["derive"] }
async-nats = "0.38"
nkeys = "0.4.4"
serde_json.workspace = true
log.workspace = true
async-trait.workspace = true
anyhow.workspace = true
futures.workspace = true
bytestring.workspace = true
