[package]
name = "rmqtt-bridge-egress-pulsar"
version = "0.1.0"
description = "Bridge remote Apache-Pulsar in egress mode."
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmqtt.workspace = true
rmqtt-macros.workspace = true
serde = { workspace = true, features = ["derive"] }
pulsar = "=6.3.0"