[package]
name = "rmqtt-bridge-egress-reductstore"
version = "0.1.0"
description = "Bridge remote reductstore in egress mode."
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmqtt.workspace = true
rmqtt-macros.workspace = true
serde = { workspace = true, features = ["derive"] }
reduct-rs = "1.12.0"