[package]
name = "rmqtt-bridge-ingress-kafka"
version = "0.1.0"
description = "Bridge remote KAFKA in ingress mode."
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmqtt.workspace = true
rmqtt-macros.workspace = true
serde = { workspace = true, features = ["derive"] }
event-notify = "0.1.1"
rdkafka = { version = "0.36", features = ["cmake-build"] }