[package]
name = "rmqtt-bridge-ingress-kafka"
version = "0.1.1"
description = "Bridge remote KAFKA in ingress mode."
repository = "https://github.com/rmqtt/rmqtt/tree/master/rmqtt-plugins/rmqtt-bridge-ingress-kafka"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmqtt = { workspace = true, features = ["plugin", "msgstore"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }
serde_json.workspace = true
log.workspace = true
async-trait.workspace = true
anyhow.workspace = true
bytestring.workspace = true
bytes.workspace = true
event-notify = "0.1.1"
rdkafka = { version = "0.37", features = ["cmake-build"] }