[package]
name = "rmqtt-bridge-ingress-mqtt"
version = "0.1.0"
description = "Bridge remote MQTT in ingress mode."
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmqtt.workspace = true
rmqtt-macros.workspace = true
serde = { workspace = true, features = ["derive"] }
ntex-mqtt = "=4.5.1"
ntex = { version = "=2.10.0", features = ["tokio", "rustls"] }
event-notify = "0.1.1"
webpki-roots = "0.26"