[package]
name = "rmqtt-bridge-ingress-mqtt"
version = "0.1.2"
description = "Bridge remote MQTT in ingress mode."
repository = "https://github.com/rmqtt/rmqtt/tree/master/rmqtt-plugins/rmqtt-bridge-ingress-mqtt"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmqtt = { workspace = true, features = ["plugin", "msgstore"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }
ntex-mqtt = "=4.5.1"
ntex = { version = "=2.10.0", features = ["tokio", "rustls"] }
event-notify = "0.1.1"
webpki-roots.workspace = true
serde_json.workspace = true
log.workspace = true
async-trait.workspace = true
anyhow.workspace = true
rustls.workspace = true
bytestring.workspace = true
bytes.workspace = true
futures.workspace = true
base64.workspace = true


