[package]
name = "rmqtt-bridge-ingress-pulsar"
version = "0.1.2"
description = "Bridge remote Apache-Pulsar in ingress mode."
repository = "https://github.com/rmqtt/rmqtt/tree/master/rmqtt-plugins/rmqtt-bridge-ingress-pulsar"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmqtt = { workspace = true, features = ["plugin", "msgstore"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }
pulsar = "6.3.0"
event-notify = "0.1.1"
serde_json.workspace = true
log.workspace = true
async-trait.workspace = true
anyhow.workspace = true
itertools.workspace = true
bytes.workspace = true
regex.workspace = true
bytestring.workspace = true
futures.workspace = true




