[package]
name = "rmqtt-cluster-broadcast"
version = "0.1.1"
authors = ["rmqtt-rs <rmqttd@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmqtt = { git = "https://github.com/rmqtt-rs/rmqtt.git", version="0.1.5"}
#rmqtt = { path = "../../rmqtt" }
log = "0.4"
async-trait = "0.1.36"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
parking_lot="0.10.0"
tokio = "1.5"
futures = "0.3.15"
once_cell="1.4.1"
anyhow = "1"