[package]
name = "rmqtt-cluster-broadcast"
version = "0.1.3"
description = "A cluster broadcast plugin for RMQTT that enables lightweight, dependency-free communication between nodes."
repository = "https://github.com/rmqtt/rmqtt/tree/master/rmqtt-plugins/rmqtt-cluster-broadcast"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmqtt = { workspace = true, features = ["plugin", "grpc", "stats", "msgstore", "shared-subscription"] }
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
log.workspace = true
async-trait.workspace = true
anyhow.workspace = true
bytes.workspace = true
bytestring.workspace = true
futures.workspace = true
ahash.workspace = true
itertools.workspace = true
bincode.workspace = true