[package]
name = "rmqtt-cluster-raft"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmqtt.workspace = true
rmqtt-macros.workspace = true
serde = { workspace = true, features = ["derive"] }
rmqtt-raft = { version = "0.3.4", features = ["reuse"] }
#rmqtt-raft = { path = "../../../rmqtt-raft", features = ["reuse"] }
backoff = { version = "0.4", features = ["futures", "tokio"] }