[package]
name = "rmqtt-cluster-raft"
version.workspace = true
description = "The RMQTT cluster, powered by the `rmqtt-cluster-raft` plugin, uses RAFT for consistency and fault tolerance. Nodes share state to ensure reliable messaging and support scalable, resilient deployments."
repository = "https://github.com/rmqtt/rmqtt/tree/master/rmqtt-plugins/rmqtt-cluster-raft"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rmqtt = { workspace = true, features = ["plugin", "grpc", "stats", "msgstore"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }
rmqtt-raft = { version = "0.5.3", features = ["reuse"] }
#rmqtt-raft = { path = "../../../rmqtt-raft", features = ["reuse"] }
backoff = { workspace = true, features = ["futures", "tokio"] }
rust-box = { workspace = true, features = ["task-exec-queue"] }
serde_json.workspace = true
log.workspace = true
slog-stdlog.workspace = true
slog.workspace = true
slog-term.workspace = true
async-trait.workspace = true
anyhow.workspace = true
bytes.workspace = true
bytestring.workspace = true
futures.workspace = true
rand.workspace = true
dashmap.workspace = true
ahash.workspace = true
bincode.workspace = true
rayon.workspace = true


lz4_flex = { version = "0.11" }
lz4 = "1.27.0"
zstd = "0.13"
flate2 = { version = "1.0.30" }
snap = { version = "1.1.1" }