[package]
name = "rmqtt-counter"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmqtt.workspace = true
rmqtt-macros.workspace = true