[package]
name = "rmqtt-counter"
version.workspace = true
description = "This plugin collects key MQTT server metrics, enhancing observability and operational insight."
repository = "https://github.com/rmqtt/rmqtt/tree/master/rmqtt-plugins/rmqtt-counter"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmqtt = { workspace = true, features = ["plugin", "metrics"] }
async-trait.workspace = true
log.workspace = true